--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
   <canvas id="c"></canvas>
   <div class="main-container">
-    <header type="tab" id = "start-tab" onClick = "gameStart()">
+    <header type="tab" id = "start-tab">
       <h1> JS !TRIVIA RELOADED</h1>
-      <h2 id="timer">00:40</h2>
+      <h2 id="timer"></h2>
       <h2 id="score">SCORE:</h2>
       <span id="nscore"></span>
       <span id="missed">MISSED:</span>
@@ -86,7 +86,7 @@
         <br>
         <br>
      
-       <input type="button" id="submit-answers" onclick="validate()" value="Submit">
+       <input type="button" id="submit-answers" value="Submit">
       </form>
       <br>
       <!--<button type="button" id="submit">SubmitAnswers</button>
