--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
   <div class="main-container">
     <header type="tab" id = "start-tab">
       <h1> JS !TRIVIA RELOADED</h1>
-      <h2 id="timer"></h2>
+      <h2 id="timer">TIME: 20 SEC</h2>
       <h2 id="score">SCORE:</h2>
       <h2 id="nscore"></h2>
       <h2 id="missed">NO ANSWER:</h2>
+      
     
     </header>
     <div class="container">  > 
